--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -42,3 +42,4 @@ error.interpolation.invalid_access=The request could not be completed because a 
 error.auth.invalid_mtls_identity=The provided authentication mechanism does not provide a valid identity. Please contact your system administrator.
 error.auth.mtls_not_client_auth=The provided certificate is not authorized to be used for client authentication.
 error.request_validation_test=Request body was validated and ControllerAdvice worked.
+error.oauth.invalid_issuer=The request token identity zone does not match the UAA server authorized by CredHub. Please validate that your request token was issued by the UAA server authorized by CredHub and retry your request.
